--- a/Pages/Account/Cart.razor
+++ b/Pages/Account/Cart.razor
@@ -14,7 +14,7 @@
             {
                 if (currentUser.Cart.Products.Count == 0)
                 {
-                    <div class="cart__empty-image"><img src="/images/cart/Корзина товаров.svg" alt="Изображение корзины товаров"></div>
+                    <div class="cart__empty-image"><img src="/images/cart/Корзина товаров.svg" aria-label="Изображение корзины товаров" alt="Изображение корзины товаров"></div>
                     <h3 class="cart__empty-title">Похоже ваша корзина пуста</h3>
                     <h3 class="cart__empty-message">Жмите 🛒 на товаре и добавляйте сюда то, что хотите купить.</h3>
                 }
@@ -26,35 +26,34 @@
                             @foreach (var cartProduct in currentUser.Cart.Products)
                             {
                                 <div class="products-cards__product-card">
-                                    <a class="product-card__image" href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name"><img src="data:image/png;base64,@Convert.ToBase64String(cartProduct.Article.Model.MainPhoto)" alt="Картинка @cartProduct.Article.Model.Name" title="@cartProduct.Article.Model.Name"></a>
+                                    <a class="product-card__image" href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Ссылка для перехода в личную карточку товара @cartProduct.Article.Model.Name"><img src="data:image/png;base64,@Convert.ToBase64String(cartProduct.Article.Model.MainPhoto)" aria-label="Картинка товара @cartProduct.Article.Model.Name" alt="Картинка товара @cartProduct.Article.Model.Name" title="Перейти в карточку товара @cartProduct.Article.Model.Name"></a>
                                     <div class="product-card__product-info">
-                                        <h3 class="product-info__name"><a href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Перейти в личную карточку товара @cartProduct.Article.Model.Name">@cartProduct.Article.Model.Name</a></h3>
-                                        <span class="product-info__color">Цвет: @cartProduct.Article.Color</span>
-                                        <span class="product-info__size">Размер: @cartProduct.Article.Size</span>
+                                        <h3 class="product-info__name"><a href="/products/product-card/@cartProduct.Article.Model.Id" aria-label="Ссылка для перехода в карточку товара @cartProduct.Article.Model.Name" title="Перейти в карточку товара @cartProduct.Article.Model.Name">@cartProduct.Article.Model.Name</a></h3>
+                                        <span class="product-info__color" aria-label="Цвет товара">Цвет: @cartProduct.Article.Color</span>
+                                        <span class="product-info__size" aria-label="Размер товара">Размер: @cartProduct.Article.Size</span>
                                     </div>
                                     <div class="product-card__counter-block">
                                         <div class="counter-block__counter">
-                                            <div class="counter__minus" @onclick="() => Decrement(cartProduct)" />
-                                            <input class="counter-input" disabled type="text" maxlength="3" @bind="cartProduct.Count" aria-label="Место ввода количества желаемого товара">
-                                            <div class="counter__plus" @onclick="() => IncrementAsync(cartProduct)" />
+                                            <div class="counter__minus" @onclick="() => Decrement(cartProduct)" aria-label="Кнопка уменьшения количества товара" title="Уменьшить количество товара"/>
+                                            <input class="counter-input" disabled type="text" maxlength="3" @bind="cartProduct.Count" aria-label="Количество товара @cartProduct.Article.Model.Name">
+                                            <div class="counter__plus" @onclick="() => IncrementAsync(cartProduct)" aria-label="Кнопка увеличения количества товара" title="Увеличить количество товара" />
                                         </div>
-                                        <span class="counter-block__price">@((cartProduct.Article.Model.Price*cartProduct.Count).ToString("### ### ###")) ₽</span>
+                                        <span class="counter-block__price" aria-label="Цена товара с учетом количества">@((cartProduct.Article.Model.Price*cartProduct.Count).ToString("### ### ###")) ₽</span>
                                     </div>
-                                    @*<div class="product-card__block-price hasDiscount">
-                                 hasDiscount
-                                <span class="block-price__price">27 999 ₽</span>
-                                <span class="block-price__discount-price">22 400 ₽</span>
-                                </div>*@
+                                    @*<div class="product-card__block-price hasDiscount"> hasDiscount
+                                    <span class="block-price__price">27 999 ₽</span>
+                                    <span class="block-price__discount-price">22 400 ₽</span>
+                                    </div>*@
                                 <div class="product-card__icons-block">
-                                    <a class="icons-block__cart-icon" @onclick="() => RemoveProductFromCart(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></a>
-                                    <label class="cart-icon__select-checkbox select-checkbox"><input name="login-remember-me-checkbox" @bind="cartProduct.IsSelected" @onclick="() => ProductSelecterToggle(cartProduct)" type="checkbox" aria-label="Чек-бокс для выборки всех товаров в корзине"><span></span></label>
+                                    <span class="icons-block__cart-icon" @onclick="() => RemoveProductFromCart(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из корзины"><img src="/icons/cart/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
+                                    <label class="cart-icon__select-checkbox select-checkbox"><input name="login-remember-me-checkbox" @bind="cartProduct.IsSelected" @onclick="() => ProductSelecterToggle(cartProduct)" type="checkbox" aria-label="Чек-бокс для выборки всех товаров в корзине" title="Выбрать @cartProduct.Article.Model.Name"><span></span></label>
                                     @if (currentUser.FavoriteList.Products.Any(favoriteProduct => favoriteProduct.Article.Id == cartProduct.Article.Id))
                                     {
-                                        <a class="icons-block__favorites-icon" @onclick="() => RemoveProductFromFavorites(cartProduct)" aria-label="Удалить товар @cartProduct.Article.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></a>
+                                        <span class="icons-block__favorites-icon" @onclick="() => RemoveProductFromFavorites(cartProduct)" aria-label="Удалить @cartProduct.Article.Model.Name из избранного"><img src="/icons/cart/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить @cartProduct.Article.Model.Name из избранного"></span>
                                     }
                                     else
                                     {
-                                        <a class="icons-block__favorites-icon" @onclick="() => AddProductInFavorites(cartProduct)" aria-label="Добавить товар @cartProduct.Article.Model.Name в избранное"><img src="/icons/cart/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></a>
+                                        <span class="icons-block__favorites-icon" @onclick="() => AddProductInFavorites(cartProduct)" aria-label="Добавить @cartProduct.Article.Model.Name в избранное"><img src="/icons/cart/Heart.svg" alt="Иконка избранного" title="Добавить @cartProduct.Article.Model.Name в избранное"></span>
                                     }
                                 </div>
                                 </div>
@@ -63,15 +62,15 @@
                         <div class="main-block__information-block">
                             @if (totalCost != 0)
                             {
-                                <div class="information-block__info"><span>Товары – @currentUser.Cart.Products.Count(cartProduct => cartProduct.IsSelected) шт.</span><span>@totalCost.ToString("### ### ###") ₽</span></div>
-                                @*<div class="information-block__info"><span>Скидка</span><span>300 ₽</span></div>*@
-                                <div class="information-block__info"><span><strong>Итого</strong></span><span><strong>@totalCost.ToString("### ### ###") ₽</strong></span></div>
+                                <div class="information-block__info" aria-label="Количество выбранного товара"><span>Товары – @currentUser.Cart.Products.Count(cartProduct => cartProduct.IsSelected) шт.</span><span>@totalCost.ToString("### ### ###") ₽</span></div>
+                                @*<div class="information-block__info" aria-label="Скидка на товары"><span>Скидка</span><span>300 ₽</span></div>*@
+                                <div class="information-block__info" aria-label="Итоговая стоимость всех товаров"><span><strong>Итого</strong></span><span><strong>@totalCost.ToString("### ### ###") ₽</strong></span></div>
                             }
                             else
                             {
-                                <div class="information-block__info"><span>Товары – 0 шт.</span><span>0 ₽</span></div>
-                                @*<div class="information-block__info"><span>Скидка</span><span>300 ₽</span></div>*@
-                                <div class="information-block__info"><span><strong>Итого</strong></span><span><strong>0 ₽</strong></span></div>
+                                <div class="information-block__info" aria-label="Количество выбранного товара"><span>Товары – 0 шт.</span><span>0 ₽</span></div>
+                                @*<div class="information-block__info" aria-label="Скидка на товары"><span>Скидка</span><span>300 ₽</span></div>*@
+                                <div class="information-block__info" aria-label="Итоговая стоимость всех товаров"><span><strong>Итого</strong></span><span><strong>0 ₽</strong></span></div>
                             }
                             <a class="information-block__button" href="/account/order-registration" @onclick="() => Db.SaveChangesAsync()" type="submit" aria-label="Кнопка для перехода на страницу Оформления заказа">Оформить заказ</a>
                         </div>
